# Slenderer2026Prototype

./: .gitmodules  CMakeLists.txt  main.cpp
src/: main.cpp  shader.cpp  shader.h
src/core/: input.cpp  input.h  window.cpp  window.h
src/importer/: asset_manager.cpp  asset_manager.h
src/renderer/: renderer.cpp  renderer.h  types.h
src/scene/: camera.cpp  camera.h  entity.h  scene.cpp  scene.h
src/utils/: types.h  util.cpp  util.h
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
vendors/stb/: stb_image.c
